@@ -1,3 +1,6 @@
+  [Michele Simionato]
+  * Introduced new loss type `residents`
+
   [Marco Pagani]
   * Fixed bug in get_profiles_from_simple_fault_data affecting KiteSurfaces
 
